# newpookemon

./: PROJECTOVERVIEW.md  Pokemon Blue.gb.ram  RAMMAP.md  README.md  post_continue_ram.npy  pyproject.toml  ram_after_boot.npy  temp_main_head.py
beater/: main.py  objectives.py  types.py
beater/brains/: __init__.py  async_brain.py  gpt.py  gpt_tmp.py
beater/env/: __init__.py  pyboy_env.py
beater/executor/: __init__.py  compiler.py  skills.py  sprite_tracker.py
beater/perception/: __init__.py  encoders.py  losses.py  tile_desc.py
beater/policy/: __init__.py  affordance.py  controller.py  nav_planner.py  options.py  plan_head.py  waypoints.py
beater/sr_memory/: __init__.py  graph.py  ops.py  passability.py
beater/training/: __init__.py  learner.py  replay.py  rewards.py  rollouts.py
beater/utils/: detectors.py  map_metadata.py  maps.py  ram_map.py  ram_view.py
configs/: default.yaml
pokemon_beater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_entity_graph.py  test_executor.py  test_nav_planner.py  test_passability.py  test_ram_map.py
