[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-beater"
version = "0.1.0"
description = "Discovery-first SR-FBAM agent for Pokemon Blue"
readme = "README.md"
authors = [{ name = "Independent" }]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
  "pyboy>=1.6",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "tqdm>=4.65",
  "networkx>=3.1",
  "requests>=2.31",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
pokemon-beater = "beater.main:main"
